apps/gerrit/gerrit.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerrit
  labels:
    app: gerrit
spec:
  ports:
  - name: gerrit-www
    port: 8080
    protocol: TCP
    targetPort: gerrit-www
  - name: gerrit-ssh
    port: 29418
    protocol: TCP
    targetPort: gerrit-ssh
  selector:
    app: gerrit

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gerrit
  labels:
    app: gerrit
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gerrit
    spec:
      containers:
      - name: gerrit
        image: horakmar/gerrit-k8s:latest
#        command: ["/bin/sleep", "86400"]
        ports:
        - containerPort: 8080
          name: gerrit-www
          protocol: TCP
        - containerPort: 29418
          name: gerrit-ssh
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/gerrit/review_site
        - name: config
          mountPath: /var/gerrit/config
      volumes:
      - name: storage
        hostPath:
          path: /var/gerrit/review_site
      - name: config
        configMap:
          name: gerrit-cfg
      nodeSelector:
        kubernetes.io/hostname: nl002
